fixed icons on mobile

--- a/web/themes/custom/il_default/scss/_views.scss
+++ b/web/themes/custom/il_default/scss/_views.scss
@@ -81,9 +81,11 @@
     max-width: 100px;
   }
   .image-with-subheading {
-    width: 200px;
-    .subheading-link {
-      max-width: 100%;
+    @media screen and (min-width: 768px){
+      width: 200px;
+      .subheading-link {
+        max-width: 100%;
+      }
     }
   }
 
